[package]
name = "mycelium"
version = "0.7.0"
edition = "2021"

# --- Dependencies ---
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rayon = "1.5"
indicatif = "0.17"
rust-stemmers = "1.2"
num_cpus = "1.13"
regex = "1.5"
itertools = "0.12"
once_cell = "1.19"
zstd = "0.13" 

# Added for major performance improvements
ahash = "0.8"       # A faster, non-cryptographic hasher for our HashMaps
log = "0.4"         # Logging facade
env_logger = "0.10" # A logger implementation